<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Shipping Tribune</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title">Welcome To The Shipping Tribune</string>
    <string name="alert_dialog_success">Saved!</string>
    <string name="alert_dialog_failed">Failed with error.</string>
    <string name="email">www.shippingtribune.com</string>
    <string name="number">+91 22 31921595</string>

    <!-- Drwawer -->
    <string name="news">Shipping News</string>
    <string name="arctical">Arctical and General News</string>
    <string name="carrer">Career</string>
    <string name="home">Home</string>
    <string name="interview">Interview</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_push_notification">PushNotificationActivity</string>
    <string name="hello_message">Welcome! Tell us a bit more about yourself.</string>
    <string name="gender_text_view">Gender</string>
    <string name="age_text_view">Age</string>
    <string name="interests">Interests</string>
    <string name="gender_male_button">Male</string>
    <string name="gender_female_button">Female</string>
    <string name="save_button">Save</string>
    <string name="refresh_button">Refresh</string>
    <string name="ok_button">OK</string>
    <string name="alert_dialog_title">Profile</string>
    <string name="title_activity_local_news">Local News</string>
    <string name="title_activity_port_news">Port News</string>
    <string name="title_activity_energy_news">Energy News</string>
    <string name="title_activity_shipp_building">Ship Building</string>
    <string name="title_activity_ship_recycling">Ship Recycling</string>
    <string name="title_activity_video">Video News</string>
    <string name="title_activity_youtube_player">YoutubePlayer</string>
    <string name="title_activity_offshorenews">Latest News</string>
    <string name="title_activity_arcticle">Article</string>
    <string name="title_activity_general_news">General News</string>
    <string name="title_activity_career">Career</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="mark1">Mr. K.P. Singh To Address Dry Bulk Cargo Industry at India Dry Bulk Cargo Summit 2015 June 5th, 2015 at Holiday Inn, Andheri (E). Fastest Growing Flag Salutes Nor-Shipping 2015   Vessel queue at Australia’s Newcastle coal port falls to 39 from 55   Shipping Corp of India back in black with US$31.6 million profit</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_interview">Interview</string>

</resources>
