<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen" >

    <RelativeLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@android:color/white" >

        <ImageButton
            android:id="@+id/navigationBtn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_drawer" />

        <ImageView
            android:id="@+id/appicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/shipping_home" />

        <TextView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/appicon"
            android:text="@string/title"
            android:textColor="#3399FF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
    
    <LinearLayout 
        android:id="@+id/bottomlay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:background="#DF781F"
        android:layout_alignParentBottom="true"
        >
        <TextView 
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            android:text="@string/email"
            />
        <ImageButton 
            android:id="@+id/call"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_call"
            />
        <TextView 
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:gravity="center"
            android:textSize="16sp"
            android:paddingRight="5dp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            android:text="@string/number"
            />
    </LinearLayout>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomlay"
        android:layout_below="@id/navigationBar" >

        <RelativeLayout
            android:id="@+id/realy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff" >

            <FrameLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menuu"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#2cbbf2" >

            <ScrollView
                android:id="@+id/secondrealtive"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:scrollbars="none" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical" >
                    
                    <Button
                        android:id="@+id/home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#2cbbf2"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/home"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#2cbbf2"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/news"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/arctical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#2cbbf2"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/title_activity_arcticle"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                    
                    <Button
                        android:id="@+id/generalnews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#2cbbf2"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/title_activity_general_news"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/carrer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#2cbbf2"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/carrer"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/interview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#2cbbf2"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/interview"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                    
                    <Button
                        android:id="@+id/Registerwith"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:background="#2cbbf2"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:text="Register For Notification"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>